crates/lang/macro/tests/ui/contract/fail/event-too-many-topics.stderr
error[E0277]: the trait bound `EventTopics<3_usize>: codegen::event::RespectTopicLimit<2_usize>` is not satisfied
  --> $DIR/event-too-many-topics.rs:27:5
   |
27 | /     pub struct Event {
28 | |         #[ink(topic)]
29 | |         arg_1: i8,
30 | |         #[ink(topic)]
...  |
33 | |         arg_3: i32,
34 | |     }
   | |_____^ the trait `codegen::event::RespectTopicLimit<2_usize>` is not implemented for `EventTopics<3_usize>`
   |
   = help: the following implementations were found:
             <EventTopics<0_usize> as codegen::event::RespectTopicLimit<0_usize>>
             <EventTopics<0_usize> as codegen::event::RespectTopicLimit<10_usize>>
             <EventTopics<0_usize> as codegen::event::RespectTopicLimit<11_usize>>
             <EventTopics<0_usize> as codegen::event::RespectTopicLimit<12_usize>>
           and 87 others
note: required by a bound in `EventRespectsTopicLimit`
  --> $DIR/event.rs:48:43
   |
48 |     <Event as EventLenTopics>::LenTopics: RespectTopicLimit<LEN_MAX_TOPICS>,
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EventRespectsTopicLimit`
